--- a/services.html
+++ b/services.html
@@ -15,6 +15,8 @@
   <![endif]-->
 </head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <body>
 
   <div class="container">
