--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
         <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
           consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
           nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-        <button>Learn More</button>
+        <button class="serbutton">Learn More</button>
       </div>
 
       <div class="service-text">
@@ -65,7 +65,7 @@
         <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
           consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
           nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-        <button>Learn More</button>
+        <button class="serbutton">Learn More</button>
       </div>
     </div>
 
@@ -75,7 +75,7 @@
         <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
           consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
           nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-        <button>Learn More</button>
+        <button class="serbutton">Learn More</button>
       </div>
 
 
@@ -84,7 +84,7 @@
         <p></p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
         consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
         nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-        <button>Learn More</button>
+        <button class="serbutton">Learn More</button>
       </div>
     </div>
 
@@ -96,7 +96,7 @@
           consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
           nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 
-        <button>Learn More</button>
+        <button class="serbutton">Learn More</button>
       </div>
 
       <div class="service-text">
@@ -106,7 +106,7 @@
           consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
           nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 
-        <button>Learn More</button>
+        <button class="serbutton">Learn More</button>
       </div>
     </div>
 
